Fixed Title Not Showing Bug

--- a/qtify/src/components/AlbumCard/AlbumCard.module.css
+++ b/qtify/src/components/AlbumCard/AlbumCard.module.css
@@ -29,7 +29,7 @@
     color: var(--color-white);
 }
 
-.albumName {
+.albumTitle {
     padding: 0;
     margin: 0;
     font-weight: 400;
